examples/test/testpolicy15449.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15449
  namespace: namespace281
spec:
  podSelector:
    matchLabels:
      key29: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value35
          key45: value25
      podSelector:
        matchLabels:
          key35: value30
          key13: value4
          key44: value46
